bk_ida/gccida/g1/emit_stack_save
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_stack_save/src/explow.c:1412:24: error: must use 'enum' tag to refer to type 'save_level'
void  emit_stack_save( save_level save_level, rtx *psave, rtx after) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_stack_save/src/explow.c:1441:28: error: use of undeclared identifier 'machine_mode'
v5 = assign_stack_local( ( machine_mode)v6, mode_size[v6], 0); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_stack_save/src/explow.c:1443:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_reg_rtx( ( machine_mode)v6); 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/emit_stack_save/src/obj/explow.o] Error 1
